[gd_scene load_steps=2 format=3 uid="uid://ba5l614b0o1s1"]

[ext_resource type="Script" path="res://scripts/effect_component.gd" id="1_fale2"]

[node name="EffectComponent" type="Node2D"]
script = ExtResource("1_fale2")

[node name="PoisonedTimer" type="Timer" parent="."]
one_shot = true

[node name="PoisonDamageTimer" type="Timer" parent="PoisonedTimer"]

[node name="BurningTimer" type="Timer" parent="."]
one_shot = true

[node name="BurnDamageTimer" type="Timer" parent="BurningTimer"]

[node name="SlowedTimer" type="Timer" parent="."]
one_shot = true

[node name="StunnedTimer" type="Timer" parent="."]
one_shot = true

[node name="ShieldedTimer" type="Timer" parent="."]
one_shot = true

[node name="HasteTimer" type="Timer" parent="."]
one_shot = true

[node name="LightTimer" type="Timer" parent="."]

[connection signal="timeout" from="PoisonedTimer/PoisonDamageTimer" to="." method="_on_poison_damage_timer_timeout"]
[connection signal="timeout" from="SlowedTimer" to="." method="_on_slowed_timer_timeout"]
[connection signal="timeout" from="StunnedTimer" to="." method="_on_stunned_timer_timeout"]
[connection signal="timeout" from="ShieldedTimer" to="." method="_on_shielded_timer_timeout"]
[connection signal="timeout" from="HasteTimer" to="." method="_on_haste_timer_timeout"]
[connection signal="timeout" from="LightTimer" to="." method="_on_light_timer_timeout"]
